Opened 18 years ago
Closed 18 years ago
#896 closed bug (fixed)
Abiword crash + click ok = crashed app_server
Reported by: | darkwyrm | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
found in hrev19037
Start AbiWord 1.0.1 ("gluckalo" build) and it crashes. Big deal. Clicking on the OK button after it crashes causes the app_server to segfault in ServerApp::Activate
Note:
See TracTickets
for help on using tickets.
I even found two different bugs causing this crash! Thanks for the report; the problem is fixed in hrev19075.