Fixed two different bugs that could cause bug #896: * the app's Activate() method was called unsafely; the ServerApp pointer could   have become invalid in the mean time. * when hiding a floating window (because its parent got hidden) that had focus   or even was the mouse event window (was currently dragged over the screen)   the focus was not moved to another window.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19075 a95241bf-73f2-0310-859d-f6bbb57e9c96